--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "easymde": "^2.20.0",
     "flag-icons": "^7.3.2",
     "markdown-it": "^14.1.0",
+    "pecoret-vue": "file:../../pecoret-vue",
     "pinia": "^3.0.2",
     "radix-vue": "^1.9.17",
     "tailwind-merge": "^3.2.0",
